envoy-gateway/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-route
  namespace: default
spec:
  parentRefs:
    - name: envoy-api-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /users

      backendRefs:
        - name: user-service
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog-route
  namespace: default
spec:
  parentRefs:
    - name: envoy-api-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /blog

      backendRefs:
        - name: blog-service
          port: 3001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invoice-route
  namespace: default
spec:
  parentRefs:
    - name: envoy-api-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /invoice

      backendRefs:
        - name: invoice-service
          port: 3002
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: payment-route
  namespace: default
spec:
  parentRefs:
    - name: envoy-api-gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /payment

      backendRefs:
        - name: payment-service
          port: 3500
